Cursor class hierarchy edited to accommodate for FindAndRerank:
    - renamed the 'FindCursorState' enum to `CursorState`
Maps for tables expressed as list of pairs (association lists):
    - support for automatic handling of dicts and DataAPIMaps in the proper table payload portions
    - introduced serdes option `encode_maps_as_lists_in_tables` (default to False) to control
Exceptions
    - `DataAPIResponseException.error_descriptors` is a property (computed from detailed_error_descriptors)
    - better string representation of `DataAPIDetailedErrorDescriptor`
Arbitrary field names and dot-escaping:
    - offering utilities `astrapy.utils.document_paths.escape_field_names/unescape_field_path`
    - `distinct` methods can accept a list of (literal) str|int as well as a(n escaped) identifier string
Spawner methods for databases/admins standardized; they don't issue DevOps API calls.
    - removed `normalize_region_for_id` utility method, not used anymore.
    - `AstraDBAdmin.get_[async]_database()`:
        - does not run DevOps API calls anymore (for missing keyspace/region);
        - defers defaults to the [Async]Database class consistently;
        - removed `database_admin_timeout_ms`, `request_timeout_ms`, `timeout_ms` parameters;
        - `region` now required if `id` passed instead of endpoint.
    - `AstraDBDatabaseAdmin.get[_async]_database()`:
        - removed `database_admin_timeout_ms`, `request_timeout_ms`, `timeout_ms` parameters.
    - `AstraDBDatabaseAdmin.get_database_admin()` standardized and simplified:
        - does not run DevOps API calls anymore (for missing keyspace/region);
        - removed `database_admin_timeout_ms`, `request_timeout_ms`, `timeout_ms` parameters;
        - `region` now required if `id` passed instead of endpoint.
Support for Astra DB "custom domain" endpoints for database
    - in which case: `.id`, `.region`, `.get_database_admin()`, `.info()` and `.name()` aren't available.
Table indexes: